# swpp-2025-project-team-07

./: .gitignore  LAZY_VIDEO_LOADING_DESIGN.md  README.md  package-lock.json
.github/: labeler.yml  pull_request_template.md
.github/workflows/: deploy-encrypted-vectordb.yml  deploy-server.yml  deploy-vectordb-chat.yml  deploy-vectordb-screen.yml  pr-labeler.yml  server-tests.yml  test-frontend.yml
frontend/: README.md  VIDEO_SET_FEATURE.md  convert_with_optimum.py  forge.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  test-evd.js  test_optimum_model.mjs  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts  vitest.config.ts
frontend/docs/: TESTING.md
frontend/e2e/: example.e2e.ts  main-preload.e2e.ts
frontend/e2e/helpers/: electron.ts
frontend/playwright-report/: index.html
frontend/public/: embedding-worker.html
frontend/scripts/: generate-icons.sh
frontend/src/: App.test.tsx  App.tsx  embedding-worker-preload.ts  embedding-worker.ts  index.css  main.test.ts  main.ts  preload.test.ts  preload.ts  renderer.test.tsx  renderer.tsx
frontend/src/assets/: logo.icns
frontend/src/components/: AppContainer.test.tsx  AppContainer.tsx  AuthFlow.test.tsx  AuthFlow.tsx  ChatHeader.test.tsx  ChatHeader.tsx  ChatInput.test.tsx  ChatInput.tsx  ChatInterface.test.tsx  ChatInterface.tsx  ChatMessages.test.tsx  ChatMessages.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  ChatStatusIndicators.test.tsx  ChatStatusIndicators.tsx  ForgotPasswordForm.test.tsx  ForgotPasswordForm.tsx  LoginForm.test.tsx  LoginForm.tsx  MarkdownMessage.test.tsx  MarkdownMessage.tsx  ModelDownloadDialog.test.tsx  ModelDownloadDialog.tsx  ModelSelector.tsx  OnboardingTooltip.test.tsx  OnboardingTooltip.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  SignupForm.test.tsx  SignupForm.tsx  VideoCandidateGrid.test.tsx  VideoCandidateGrid.tsx  VideoModelDownloadDialog.tsx  VideoPlayerModal.test.tsx  VideoPlayerModal.tsx  WelcomeScreen.tsx
frontend/src/components/ui/: checkbox.tsx  dialog.tsx  scroll-area.tsx
frontend/src/config/: system-prompt.test.ts  system-prompt.ts
frontend/src/embedders/: ChatEmbedder.ts  Embedder.ts
frontend/src/embedding/: ClipVideoEmbedder.test.ts  ClipVideoEmbedder.ts  ort.test.ts  ort.ts  video-sampler.test.ts  video-sampler.ts
frontend/src/encryption/evd/: CMakeLists.txt
frontend/src/encryption/evd/example/: ex0_ip.py  ex1_deep1m.py  ex2_laion.py  ex3_locomo.py  run_server.py
frontend/src/encryption/evd/include/evd/: EVDClient.hpp  EVDOperation.hpp  Exception.hpp  HEval.hpp  Keys.hpp  MLWESwitchingKey.hpp  Random.hpp  Server.hpp  SwitchingKey.hpp
frontend/src/encryption/evd/node/: README.md  addon.cpp  index.ts  types.d.ts
frontend/src/encryption/evd/src/: Client.cpp  EVDClient.cpp  HEval.cpp  PIRServer.cpp
frontend/src/examples/: video-set-usage.ts
frontend/src/llm/: downloader.ts  embedding.test.ts  embedding.ts  llm-provider.ts  manager.test.ts  manager.ts  ollama-manager.test.ts  ollama-manager.ts  openai-manager.ts
frontend/src/recording/: base.test.ts  base.ts  factory.test.ts  factory.ts  native.test.ts  native.ts  owa.test.ts  owa.ts  provider.test.tsx  provider.tsx  recall.test.ts  recall.ts
frontend/src/services/: auth.test.ts  auth.ts  chat.test.ts  chat.ts  collection-loader.ts  collection.test.ts  collection.ts  embedding.service.test.ts  embedding.ts  encrypted-collection.ts  llm.test.ts  llm.ts  memory.test.ts  memory.ts  processing-status.test.ts  processing-status.ts  query-transformation.ts  queryTransformation.ts
frontend/src/styles/: globals.css
frontend/src/test/: mockMotion.ts  mockUi.tsx  setup.ts
frontend/src/types/: chat.ts  electron.d.ts  video.ts
frontend/src/utils/: apiRequest.test.ts  apiRequest.ts  downloader.test.ts  downloader.ts  encryption.test.ts  encryption.ts  frame-extractor-browser.ts  user.test.ts  user.ts  video-frame-extractor.ts
server/: TESTING.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
server/chat/: models.py  serializers.py  urls.py  views.py
server/chat/migrations/: 0001_initial.py  0002_chatmessage_updated_at.py  0003_alter_chatsession_options.py
server/chat/tests/: conftest.py  factories.py  test_models.py  test_views.py
server/collection/: models.py  urls.py  vectordb_client.py  views.py
server/collection/migrations/: 0001_initial.py  0002_screenrecording_delete_videosetmetadata_and_more.py
server/collection/tests/: test_vectordb_client.py  test_views.py
server/config/: settings.py  storages.py  urls.py
server/config/settings/: base.py  local.py  production.py  test.py
server/docker/: Dockerfile
server/user/: admin.py  models.py  profile_urls.py  serializers.py  urls.py  views.py
server/user/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_passwordresetotp.py
server/user/tests/: conftest.py  factories.py  test_models.py  test_password_reset.py  test_serializers.py  test_views.py
vectordb/: requirements.txt
vectordb/config/: urls.py
vectordb/config/settings/: base.py  production.py
vectordb/docker/: Dockerfile  Dockerfile_chat  Dockerfile_encrypted  Dockerfile_screen  Dockerfile_screen_encrypted
vectordb/encrypted_vectordb/: run_server.py
vectordb/encrypted_vectordb/evd/: .gitignore  CMakeLists.txt  setup.py
vectordb/encrypted_vectordb/evd/conda/: evd-dev.yml
vectordb/encrypted_vectordb/evd/include/evd/: Ciphertext.hpp  Client.hpp  Const.hpp  EVDServer.hpp  HEval.hpp  MLWECiphertext.hpp  Message.hpp  MetricType.hpp  PIRServer.hpp  Polynomial.hpp  SecretKey.hpp  TopK.hpp  Type.hpp
vectordb/encrypted_vectordb/evd/legacy_for_tcp/: CMakeLists.txt  EVDClient.cpp  EVDClient.hpp  EVDServer.cpp  EVDServer.hpp
vectordb/encrypted_vectordb/evd/python/: bindings.cpp
vectordb/encrypted_vectordb/evd/src/: EVDServer.cpp  HEval.cpp  PIRServer.cpp  Random.cpp  SecretKey.cpp  Server.cpp
vectordb/vectordb/: apps.py  milvus_vectordb.py  urls.py  views.py
vectordb/vectordb/vectordb/: __init__.py  base_vectordb.py  milvus_vectordb.py  naive_vectordb.py
